--- a/styles/components/layout.module.scss
+++ b/styles/components/layout.module.scss
@@ -6,6 +6,8 @@
 	position: absolute;
 	top: 0;
 	left: 0;
+	min-width: 100vw;
+	min-height: 100vh;
 	width: 100%;
 	height: 100%;
 	background: center no-repeat url(/images/loading.svg);
